[package]
name = "db_builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
glob = "0.3.0"
clap = { version = "3.1.18", features = ["derive"] }
named_tuple = "0.1.3"
threadpool = "1.8.1"
chrono = "0.4.19"
rusqlite = "0.27.0"
itertools = "0.10.3"
num_cpus = "1.13.1"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"


# Fix for lsqlite3 not found on windows
[features]
windows = ["rusqlite/bundled"]
